--- a/pg-front-main/.env
+++ b/pg-front-main/.env
@@ -3,11 +3,11 @@
 VITE_API_URL=https://pege.fan
 
 # Start date
-VITE_START_DATE_INPUT=2025-08-20 12:00:00
+VITE_START_DATE_INPUT=2025-08-20T06:00:00Z
 
 # Time between snapshots in seconds (default: 10 minutes)
-VITE_TIME_BETWEEN_SNAPSHOTS_MINUTES=0
-VITE_TIME_BETWEEN_SNAPSHOTS_DAYS=1
+VITE_TIME_BETWEEN_SNAPSHOTS_MINUTES=10
+VITE_TIME_BETWEEN_SNAPSHOTS_DAYS=0
 
 # Donation address
 VITE_DONATION_ADDRESS=0x5874aBd27D099A3Cd198d6BC8559E1b9E2f6Cc08
