--- a/pg-front-main/.env
+++ b/pg-front-main/.env
@@ -1,6 +1,6 @@
 # PEGE Configuration
 
-VITE_API_URL=https://pege.fan
+VITE_API_URL=https://pege.one
 
 # Start date
 VITE_START_DATE_INPUT=2025-08-20T06:00:00Z
